# attn-ensemble-hetero-networks

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: demo.yaml
data/sample/: node_metrics.csv
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md
scripts/: run_demo.py
src/aehdn/data/: synthetic_hetero.py
src/aehdn/drift/: calibration.py
src/aehdn/ensemble/: attn_fusion.py  iforest.py
src/aehdn/eval/: metrics.py
src/aehdn/models/: ae.py  gat.py  lstm_ae.py
src/aehdn/utils/: common.py
tests/: test_data.py  test_pkg.py
